fix: spacing between quote and author

--- a/src/styles/modules/_heading.scss
+++ b/src/styles/modules/_heading.scss
@@ -23,7 +23,7 @@
    font-size: 18px;
    line-height: 21px;
    mix-blend-mode: normal;
-   margin-top: 5px;
+   margin-top: 15px;
 }
 .heading__title {
    font-family: var(--font-header);
